Tue Oct  5 15:13:29 1999  Owen Taylor  <otaylor@redhat.com>

	* pixmap_theme_draw.c (apply_theme_image): Don't set
	background pixmap on pixmaps.

1999-02-14  Raja R Harinath  <harinath@cs.umn.edu>

	* Theme/gtk/Makefile.am.in (Makefile.am): Handle the case when
	files are deleted.

Thu Feb 11 21:16:53 1999  Owen Taylor  <otaylor@redhat.com>

	* pixmap_theme_main.c (theme_data_unref): Free the
	theme data structure as well as the contents.

1999-02-03  Raja R Harinath  <harinath@cs.umn.edu>

	* Theme/gtk/Makefile.am.in: New file.  Theme/gtk/Makefile.am is
	generated from this file when new *.png files are added.

1999-01-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* pixmap_theme_main.c (theme_init): Turn on pixmap cache. 

Mon Jan 18 13:37:23 1999  Owen Taylor  <otaylor@redhat.com>

	* Theme/gtk/gtkrc: Give buttons a gray background
	color so they look a little less funny when initially
	drawing.

Wed Jan 13 18:58:25 1999  Owen Taylor  <otaylor@redhat.com>

	* pixmap_theme_draw.c: Fixed pervasive mis-bracketing
	that was causing drawing if the drawn region and
	clipping region did NOT intersect, and a couple
	of errors in computing source and destination 
	regions.

1998-11-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* pixmap_theme_draw.c: #include <math.h>

1998-11-07  Raja R Harinath  <harinath@cs.umn.edu>

	* Theme/gtk/Makefile.am (theme_DATA): 
	Update to new directory contents.
	* configure.in: Remove.

Fri Nov  6 17:26:12 1998  Owen Taylor  <otaylor@redhat.com>

	* pixmap_theme_main.c: Removed some debugging 
	printf's. 

	* Theme/gtk/notebook1.c Theme/gtk/menubar.png: new
	bigger pixmaps to reduce pixelation.

	* Theme/gtk/gtkrc: Reorganized to use several styles
	instead of one huge style. Change clist backgrounds
	to be prettier.

Thu Nov  5 10:23:46 1998  Owen Taylor  <otaylor@redhat.com>

	* pixmap_theme_draw.c (draw_shadow_gap): Fixed hard-coded
	gap_side of '0'.

Mon Nov  2 14:46:02 1998  Owen Taylor  <otaylor@redhat.com>
