@@ -1,3 +1,8 @@
+1999-11-22  Martin Baulig  <martin@home-of-linux.org>
+
+	* pixmap_theme_main.c (theme_duplicate_style): Really copy the
+	`src_data->img_list', not just the pointer that points to it.
+
 Tue Oct  5 15:13:29 1999  Owen Taylor  <otaylor@redhat.com>
 
 	* pixmap_theme_draw.c (apply_theme_image): Don't set
